--- a/DataMajor/First_Swipe/0001.Scala.FS.md
+++ b/DataMajor/First_Swipe/0001.Scala.FS.md
@@ -683,7 +683,7 @@ val employees = List(
 val result = employees
   .filter(e => e.role == "Engineer")
   .map(e => e.copy(salary = e.salary * 1.10))
-  .map(e => s"${e.name}: $${e.salary}")
+  .map(e => f"${e.name}: $$${e.salary}%.2f")
 
 result.foreach(println)
 ```
@@ -691,3 +691,242 @@ result.foreach(println)
 ---
 
 
+# Option, Try, and Either
+
+These three are Scala's answer to one of the biggest problems in data pipelines — **nulls, missing data, and errors crashing your job at 2am.** 😅
+
+---
+
+## The Problem First
+
+In Python or Java you've probably seen this:
+
+```python
+# Python — this crashes if key doesn't exist
+value = my_dict["some_key"]  # KeyError!
+
+# Or worse — silent null passing through your pipeline
+value = None
+result = value.strip()  # AttributeError!
+```
+
+Scala says — let's make the possibility of missing data **explicit in the type system** so you're forced to handle it.
+
+---
+
+## Option — Maybe a Value, Maybe Nothing
+
+`Option` has exactly two states:
+- `Some(value)` — there is a value
+- `None` — there is no value
+
+```scala
+// Instead of returning null, return Option
+def findEmployee(id: String, db: Map[String, String]): Option[String] = {
+  db.get(id)  // returns Some(value) or None automatically
+}
+
+val database = Map(
+  "E001" -> "Alice",
+  "E002" -> "Bob",
+  "E003" -> "Carol"
+)
+
+val result1 = findEmployee("E001", database)  // Some(Alice)
+val result2 = findEmployee("E999", database)  // None
+```
+
+Now you're **forced** to handle both cases:
+
+```scala
+// Pattern matching on Option
+result1 match {
+  case Some(name) => println(s"Found employee: $name")
+  case None       => println("Employee not found")
+}
+// Found employee: Alice
+
+result2 match {
+  case Some(name) => println(s"Found employee: $name")
+  case None       => println("Employee not found")
+}
+// Employee not found
+```
+
+---
+
+## Option Methods — Very Useful in Pipelines
+
+```scala
+val salary: Option[Double] = Some(95000.00)
+val noSalary: Option[Double] = None
+
+// getOrElse — provide a default if None
+println(salary.getOrElse(0.0))    // 95000.0
+println(noSalary.getOrElse(0.0))  // 0.0
+
+// map — transform if Some, skip if None
+val bonus = salary.map(s => s * 0.10)
+println(bonus)  // Some(9500.0)
+
+val noBonus = noSalary.map(s => s * 0.10)
+println(noBonus)  // None — no crash!
+
+// isDefined / isEmpty
+println(salary.isDefined)   // true
+println(noSalary.isEmpty)   // true
+```
+
+This is huge in Spark — when reading CSVs or JSONs with missing fields, Option prevents your entire job from crashing on one bad record.
+
+---
+
+## Try — Success or Failure
+
+`Option` handles missing values. `Try` handles **operations that might throw exceptions**:
+
+- `Success(value)` — operation worked
+- `Failure(exception)` — operation failed
+
+```scala
+import scala.util.{Try, Success, Failure}
+
+def parseAmount(s: String): Try[Double] = {
+  Try(s.toDouble)  // wraps the risky operation
+}
+
+val good = parseAmount("5000.00")   // Success(5000.0)
+val bad  = parseAmount("abc")       // Failure(NumberFormatException)
+
+// Pattern match on the result
+good match {
+  case Success(amount) => println(s"Valid amount: $amount")
+  case Failure(ex)     => println(s"Parse error: ${ex.getMessage}")
+}
+// Valid amount: 5000.0
+
+bad match {
+  case Success(amount) => println(s"Valid amount: $amount")
+  case Failure(ex)     => println(s"Parse error: ${ex.getMessage}")
+}
+// Parse error: For input string: "abc"
+```
+
+---
+
+## Try in a Real Pipeline
+
+```scala
+import scala.util.{Try, Success, Failure}
+
+case class RawRecord(id: String, amountStr: String, country: String)
+case class Transaction(id: String, amount: Double, country: String)
+
+def parseRecord(raw: RawRecord): Try[Transaction] = Try {
+  Transaction(
+    id      = raw.id,
+    amount  = raw.amountStr.toDouble,  // risky — might fail
+    country = raw.country
+  )
+}
+
+val rawRecords = List(
+  RawRecord("T001", "5000.00", "US"),
+  RawRecord("T002", "abc",     "UK"),  // bad data
+  RawRecord("T003", "1200.00", "CA"),
+  RawRecord("T004", "??",      "US")   // bad data
+)
+
+val results = rawRecords.map(r => parseRecord(r))
+
+// Separate good records from bad
+val good = results.collect { case Success(t) => t }
+val bad  = results.collect { case Failure(e) => e.getMessage }
+
+println("Good records:")
+good.foreach(println)
+
+println("\nBad records:")
+bad.foreach(println)
+```
+
+Output:
+```
+Good records:
+Transaction(T001,5000.0,US)
+Transaction(T003,1200.0,CA)
+
+Bad records:
+For input string: "abc"
+For input string: "??"
+```
+
+This pattern — parse, separate good from bad, process good, log bad — is the backbone of every production data pipeline.
+
+---
+
+## Either — Success or a Meaningful Error
+
+`Try` gives you the exception. `Either` lets you return a **custom error message** which is more useful in business logic:
+
+- `Right(value)` — success (think "right" = correct)
+- `Left(error)`  — failure with your own error description
+
+```scala
+def validateTransaction(id: String, amount: Double): Either[String, Transaction] = {
+  if (amount <= 0)
+    Left(s"$id: Amount must be positive, got $amount")
+  else if (amount > 1000000)
+    Left(s"$id: Amount exceeds maximum limit: $amount")
+  else
+    Right(Transaction(id, amount, "US"))
+}
+
+val r1 = validateTransaction("T001", 5000.00)
+val r2 = validateTransaction("T002", -100.00)
+val r3 = validateTransaction("T003", 2000000.00)
+
+List(r1, r2, r3).foreach {
+  case Right(t)    => println(s"Valid: ${t.id} — $${t.amount}")
+  case Left(error) => println(s"Invalid: $error")
+}
+```
+
+Output:
+```
+Valid: T001 — $5000.0
+Invalid: T002: Amount must be positive, got -100.0
+Invalid: T003: Amount exceeds maximum limit: 2000000.0
+```
+
+---
+
+## When to Use Which
+
+| Situation | Use |
+|---|---|
+| Value might be missing | `Option` |
+| Operation might throw exception | `Try` |
+| Need custom error messages | `Either` |
+
+---
+
+## Quick Exercise
+
+What does this print?
+
+```scala
+import scala.util.{Try, Success, Failure}
+
+val inputs = List("100.0", "200.0", "oops", "400.0", "??")
+
+val results = inputs
+  .map(s => Try(s.toDouble))
+  .collect { case Success(v) => v }
+  .filter(v => v > 150.0)
+  .map(v => v * 2)
+
+println(results)
+```
+
+---
