--- a/DataMajor/First_Swipe/0001.Scala.FS.md
+++ b/DataMajor/First_Swipe/0001.Scala.FS.md
@@ -930,3 +930,399 @@ println(results)
 ```
 
 ---
+
+# Scala with Spark
+
+This is where your existing PySpark knowledge becomes a superpower. The concepts are identical — you're just writing Scala syntax. Let's make that connection explicit at every step.
+
+---
+
+## Setting Up a Spark Session
+
+The entry point to everything in Spark:
+
+```scala
+import org.apache.spark.sql.SparkSession
+
+val spark = SparkSession.builder()
+  .appName("CapitalOne Transaction Pipeline")
+  .master("local[*]")  // use all available cores locally
+  .getOrCreate()
+
+// Always import implicits — enables DataFrame magic
+import spark.implicits._
+```
+
+Compare to PySpark:
+```python
+from pyspark.sql import SparkSession
+
+spark = SparkSession.builder \
+    .appName("CapitalOne Transaction Pipeline") \
+    .master("local[*]") \
+    .getOrCreate()
+```
+
+Nearly identical — just Scala syntax.
+
+---
+
+## Creating DataFrames
+
+```scala
+// Method 1 — from a case class (most common in Scala)
+case class Transaction(
+  id:       String,
+  amount:   Double,
+  category: String,
+  country:  String,
+  status:   String
+)
+
+val transactions = Seq(
+  Transaction("T001", 5000.00,  "retail",   "US", "approved"),
+  Transaction("T002", 75000.00, "wire",      "UK", "approved"),
+  Transaction("T003", 200.00,   "gambling",  "US", "approved"),
+  Transaction("T004", 1200.00,  "retail",    "CA", "declined"),
+  Transaction("T005", 450.00,   "grocery",   "US", "approved")
+).toDF()  // converts to DataFrame using implicits
+
+transactions.show()
+```
+
+Output:
+```
++----+--------+--------+-------+--------+
+|  id|  amount|category|country|  status|
++----+--------+--------+-------+--------+
+|T001|  5000.0|  retail|     US|approved|
+|T002| 75000.0|    wire|     UK|approved|
+|T003|   200.0|gambling|     US|approved|
+|T004|  1200.0|  retail|     CA|declined|
+|T005|   450.0| grocery|     US|approved|
++----+--------+--------+-------+--------+
+```
+
+---
+
+## Basic DataFrame Operations
+
+Everything you know from PySpark works the same way:
+
+```scala
+import org.apache.spark.sql.functions._
+
+// select
+transactions.select("id", "amount", "country").show()
+
+// filter
+transactions.filter(col("amount") > 1000).show()
+
+// filter with AND condition
+transactions
+  .filter(col("amount") > 1000 && col("country") === "US")
+  .show()
+
+// withColumn — add or modify a column
+transactions
+  .withColumn("amountInGBP", col("amount") * 0.79)
+  .show()
+
+// groupBy and aggregate
+transactions
+  .groupBy("country")
+  .agg(
+    count("id").as("total_transactions"),
+    sum("amount").as("total_amount"),
+    avg("amount").as("avg_amount")
+  )
+  .show()
+```
+
+Output of groupBy:
+```
++-------+--------------------+------------+----------+
+|country|total_transactions  |total_amount|avg_amount|
++-------+--------------------+------------+----------+
+|     US|                   3|    5650.0  |  1883.33 |
+|     UK|                   1|   75000.0  | 75000.0  |
+|     CA|                   1|    1200.0  |  1200.0  |
++-------+--------------------+------------+----------+
+```
+
+---
+
+## Datasets — Scala's Secret Weapon over PySpark
+
+This is where Scala Spark pulls ahead of PySpark. A **Dataset** is a typed DataFrame — you get compile-time type safety:
+
+```scala
+// DataFrame — untyped, like PySpark
+val df = transactions  // DataFrame[Row]
+
+// Dataset — typed, Scala only
+val ds = transactions.as[Transaction]  // Dataset[Transaction]
+
+// Now you can use case class fields directly
+ds.filter(t => t.amount > 1000 && t.country == "US")
+  .map(t => t.copy(status = "flagged"))
+  .show()
+```
+
+The difference in production:
+
+```scala
+// DataFrame — error shows at RUNTIME (bad)
+df.filter(col("amountt") > 1000)  // typo — crashes when job runs
+
+// Dataset — error shows at COMPILE TIME (good)
+ds.filter(t => t.amountt > 1000)  // typo — caught before job even runs!
+```
+
+At Capital One scale — billions of records — catching errors at compile time instead of runtime saves hours of debugging.
+
+---
+
+## Reading and Writing Data
+
+```scala
+// Reading CSV
+val df = spark.read
+  .option("header", "true")
+  .option("inferSchema", "true")
+  .csv("s3://capitalone-bucket/transactions/")
+
+// Reading JSON
+val df = spark.read
+  .json("s3://capitalone-bucket/transactions/")
+
+// Reading Parquet — most common in production
+val df = spark.read
+  .parquet("s3://capitalone-bucket/transactions/")
+
+// Writing to Parquet with partitioning
+df.write
+  .mode("overwrite")
+  .partitionBy("country", "status")
+  .parquet("s3://capitalone-bucket/output/")
+```
+
+Compare to PySpark:
+```python
+# PySpark — identical concept
+df = spark.read \
+    .option("header", "true") \
+    .csv("s3://capitalone-bucket/transactions/")
+
+df.write \
+    .mode("overwrite") \
+    .partitionBy("country", "status") \
+    .parquet("s3://capitalone-bucket/output/")
+```
+
+Exactly the same — just Scala syntax.
+
+---
+
+## User Defined Functions (UDFs)
+
+When built-in Spark functions aren't enough, you write your own:
+
+```scala
+import org.apache.spark.sql.functions.udf
+
+// Define the function
+val riskScoreUDF = udf((amount: Double, country: String) => {
+  (amount, country) match {
+    case (a, c) if a > 50000 && c != "US" => "HIGH"
+    case (a, _) if a > 10000              => "MEDIUM"
+    case _                                 => "LOW"
+  }
+})
+
+// Register and use it
+val result = transactions
+  .withColumn("risk_score", riskScoreUDF(col("amount"), col("country")))
+
+result.show()
+```
+
+Output:
+```
++----+--------+--------+-------+--------+----------+
+|  id|  amount|category|country|  status|risk_score|
++----+--------+--------+-------+--------+----------+
+|T001|  5000.0|  retail|     US|approved|       LOW|
+|T002| 75000.0|    wire|     UK|approved|      HIGH|
+|T003|   200.0|gambling|     US|approved|       LOW|
+|T004|  1200.0|  retail|     CA|declined|       LOW|
+|T005|   450.0| grocery|     US|approved|       LOW|
++----+--------+--------+-------+--------+----------+
+```
+
+---
+
+## Joins — Critical for Data Engineering
+
+```scala
+case class Customer(id: String, name: String, tier: String)
+
+val customers = Seq(
+  Customer("C001", "Alice Johnson", "Premium"),
+  Customer("C002", "Bob Smith",     "Standard"),
+  Customer("C003", "Carol White",   "Premium")
+).toDF()
+
+case class Transaction2(id: String, customerId: String, amount: Double)
+
+val transactions2 = Seq(
+  Transaction2("T001", "C001", 5000.00),
+  Transaction2("T002", "C001", 3000.00),
+  Transaction2("T003", "C002", 1500.00),
+  Transaction2("T004", "C999", 750.00)   // no matching customer
+).toDF()
+
+// Inner join
+val inner = transactions2
+  .join(customers, transactions2("customerId") === customers("id"), "inner")
+  .select("id", "customerId", "amount", "name", "tier")
+
+inner.show()
+
+// Left join — keeps all transactions even without customer match
+val left = transactions2
+  .join(customers, transactions2("customerId") === customers("id"), "left")
+  .select("id", "customerId", "amount", "name", "tier")
+
+left.show()
+```
+
+Inner join output:
+```
++----+----------+------+-------------+--------+
+|  id|customerId|amount|         name|    tier|
++----+----------+------+-------------+--------+
+|T001|      C001|5000.0|Alice Johnson| Premium|
+|T002|      C001|3000.0|Alice Johnson| Premium|
+|T003|      C002|1500.0|    Bob Smith|Standard|
++----+----------+------+-------------+--------+
+```
+
+Left join output — T004 kept with nulls:
+```
++----+----------+------+-------------+--------+
+|  id|customerId|amount|         name|    tier|
++----+----------+------+-------------+--------+
+|T001|      C001|5000.0|Alice Johnson| Premium|
+|T002|      C001|3000.0|Alice Johnson| Premium|
+|T003|      C002|1500.0|    Bob Smith|Standard|
+|T004|      C999| 750.0|         null|    null|
++----+----------+------+-------------+--------+
+```
+
+---
+
+## A Complete Pipeline — Putting It All Together
+
+This is what a real Scala Spark job looks like at Capital One:
+
+```scala
+import org.apache.spark.sql.SparkSession
+import org.apache.spark.sql.functions._
+import scala.util.{Try, Success, Failure}
+
+object TransactionPipeline {
+
+  case class Transaction(
+    id:         String,
+    customerId: String,
+    amount:     Double,
+    category:   String,
+    country:    String,
+    status:     String
+  )
+
+  def main(args: Array[String]): Unit = {
+
+    val spark = SparkSession.builder()
+      .appName("Transaction Risk Pipeline")
+      .getOrCreate()
+
+    import spark.implicits._
+
+    // 1. Read raw data
+    val rawDf = spark.read
+      .option("header", "true")
+      .option("inferSchema", "true")
+      .csv("s3://capitalone/raw/transactions/")
+
+    // 2. Cast to typed Dataset
+    val transactions = rawDf.as[Transaction]
+
+    // 3. Define risk scoring UDF
+    val riskUDF = udf((amount: Double, country: String, category: String) => {
+      (amount, country, category) match {
+        case (a, c, _) if a > 50000 && c != "US" => "HIGH"
+        case (_, _, cat) if cat == "gambling"     => "MEDIUM"
+        case (a, _, _)  if a > 10000              => "MEDIUM"
+        case _                                     => "LOW"
+      }
+    })
+
+    // 4. Transform
+    val enriched = transactions
+      .filter(col("status") === "approved")
+      .withColumn("risk_score", riskUDF(col("amount"), col("country"), col("category")))
+      .withColumn("processed_date", current_date())
+
+    // 5. Aggregate for reporting
+    val summary = enriched
+      .groupBy("country", "risk_score")
+      .agg(
+        count("id").as("transaction_count"),
+        sum("amount").as("total_amount"),
+        avg("amount").as("avg_amount")
+      )
+      .orderBy(desc("total_amount"))
+
+    // 6. Write output
+    summary.write
+      .mode("overwrite")
+      .partitionBy("country")
+      .parquet("s3://capitalone/processed/risk_summary/")
+
+    spark.stop()
+  }
+}
+```
+
+This is a production-grade Spark job. Notice how everything we learned feeds into it — case classes, pattern matching, Option/Try concepts, higher-order functions, all working together.
+
+---
+
+## Quick Exercise
+
+Given this code what does the output look like?
+
+```scala
+case class Sale(region: String, product: String, amount: Double)
+
+val sales = Seq(
+  Sale("North", "Laptop",  1200.00),
+  Sale("South", "Phone",    800.00),
+  Sale("North", "Tablet",   600.00),
+  Sale("South", "Laptop",  1100.00),
+  Sale("North", "Phone",    750.00)
+).toDF()
+
+val result = sales
+  .groupBy("region")
+  .agg(
+    count("product").as("total_sales"),
+    sum("amount").as("total_revenue")
+  )
+  .withColumn("avg_sale", col("total_revenue") / col("total_sales"))
+  .orderBy(desc("total_revenue"))
+
+result.show()
+```
