--- a/DataMajor/First_Swipe/0001.Scala.FS.md
+++ b/DataMajor/First_Swipe/0001.Scala.FS.md
@@ -1326,3 +1326,321 @@ val result = sales
 
 result.show()
 ```
+---
+
+Perfect! 🎯 100% correct!
+
+```
+North: 1200 + 600 + 750 = 2550.0  ✅
+South: 800 + 1100        = 1900.0  ✅
+
+North avg: 2550 / 3 = 850.0  ✅
+South avg: 1900 / 2 = 950.0  ✅
+
+Ordered by total_revenue descending — North first ✅
+```
+
+You nailed every detail including the column order, formatting, and sort order. You're thinking in Spark now. 💪
+
+---
+
+# SBT — Scala Build Tool
+
+Think of SBT as Scala's version of **Maven** in Java or **pip + setup.py** in Python. It manages your dependencies, compiles your code, and runs your jobs.
+
+---
+
+## Project Structure
+
+A standard Scala Spark project looks like this:
+
+```
+my-spark-project/
+│
+├── build.sbt                  ← project definition and dependencies
+├── project/
+│   └── build.properties       ← SBT version
+│
+├── src/
+│   ├── main/
+│   │   └── scala/
+│   │       └── com/capitalone/
+│   │           ├── TransactionPipeline.scala
+│   │           ├── models/
+│   │           │   └── Transaction.scala
+│   │           └── utils/
+│   │               └── RiskEngine.scala
+│   │
+│   └── test/
+│       └── scala/
+│           └── com/capitalone/
+│               └── TransactionPipelineTest.scala
+│
+└── data/
+    └── sample_transactions.csv
+```
+
+This structure will look familiar — it's the same convention as any Java/Maven project.
+
+---
+
+## build.sbt — The Heart of Your Project
+
+```scala
+// Project metadata
+name         := "capitalone-transaction-pipeline"
+version      := "1.0.0"
+scalaVersion := "2.12.15"  // Spark 3.x requires Scala 2.12
+
+// Dependencies
+libraryDependencies ++= Seq(
+
+  // Spark core
+  "org.apache.spark" %% "spark-core" % "3.3.0" % "provided",
+  "org.apache.spark" %% "spark-sql"  % "3.3.0" % "provided",
+
+  // Testing
+  "org.scalatest"    %% "scalatest"  % "3.2.9" % "test"
+)
+
+// Build a fat JAR with all dependencies included
+assembly / assemblyMergeStrategy := {
+  case PathList("META-INF", _*) => MergeStrategy.discard
+  case _                        => MergeStrategy.first
+}
+```
+
+The `%%` means SBT automatically appends the Scala version to the dependency name. The `"provided"` scope means Spark is available on the cluster — don't bundle it in your JAR.
+
+---
+
+## Common SBT Commands
+
+```bash
+# Compile your code
+sbt compile
+
+# Run tests
+sbt test
+
+# Run your main class
+sbt run
+
+# Package into a JAR for deployment
+sbt package
+
+# Build a fat JAR (includes all dependencies)
+sbt assembly
+
+# Start interactive Scala console
+sbt console
+
+# Clean build artifacts
+sbt clean
+```
+
+At Capital One you'd mostly use:
+```bash
+sbt clean compile test assembly
+```
+That one command cleans, compiles, tests, and packages — ready for deployment to EMR or Databricks.
+
+---
+
+## Organizing Your Code — Multiple Files
+
+**models/Transaction.scala**
+```scala
+package com.capitalone.models
+
+case class Transaction(
+  id:         String,
+  customerId: String,
+  amount:     Double,
+  category:   String,
+  country:    String,
+  status:     String
+)
+
+case class Customer(
+  id:   String,
+  name: String,
+  tier: String
+)
+```
+
+**utils/RiskEngine.scala**
+```scala
+package com.capitalone.utils
+
+import com.capitalone.models.Transaction
+import org.apache.spark.sql.functions.udf
+
+object RiskEngine {
+
+  // Reusable risk scoring UDF
+  val riskScoreUDF = udf((amount: Double, country: String, category: String) => {
+    (amount, country, category) match {
+      case (a, c, _) if a > 50000 && c != "US" => "HIGH"
+      case (_, _, cat) if cat == "gambling"     => "MEDIUM"
+      case (a, _, _)  if a > 10000              => "MEDIUM"
+      case _                                     => "LOW"
+    }
+  })
+
+  // Pure Scala function — no Spark needed
+  def classifyTransaction(t: Transaction): String = t match {
+    case Transaction(_, _, a, _, c, _) if a > 50000 && c != "US" => "HIGH"
+    case Transaction(_, _, _, "gambling", _, _)                   => "MEDIUM"
+    case Transaction(_, _, a, _, _, _) if a > 10000               => "MEDIUM"
+    case _                                                         => "LOW"
+  }
+}
+```
+
+**TransactionPipeline.scala**
+```scala
+package com.capitalone
+
+import com.capitalone.models.Transaction
+import com.capitalone.utils.RiskEngine
+import org.apache.spark.sql.SparkSession
+import org.apache.spark.sql.functions._
+
+object TransactionPipeline {
+
+  def main(args: Array[String]): Unit = {
+
+    val spark = SparkSession.builder()
+      .appName("Transaction Risk Pipeline")
+      .getOrCreate()
+
+    import spark.implicits._
+
+    // Read
+    val transactions = spark.read
+      .option("header", "true")
+      .option("inferSchema", "true")
+      .csv(args(0))          // path passed as argument
+      .as[Transaction]       // typed Dataset
+
+    // Transform
+    val result = transactions
+      .filter(col("status") === "approved")
+      .withColumn("risk_score",
+        RiskEngine.riskScoreUDF(
+          col("amount"),
+          col("country"),
+          col("category")
+        )
+      )
+
+    // Write
+    result.write
+      .mode("overwrite")
+      .partitionBy("country", "risk_score")
+      .parquet(args(1))      // output path passed as argument
+
+    spark.stop()
+  }
+}
+```
+
+Notice how clean this is — each file has one responsibility. Models define data, utils contain logic, pipeline orchestrates everything.
+
+---
+
+## Submitting to a Cluster
+
+Once you build your JAR with `sbt assembly`, you submit it to a cluster like this:
+
+```bash
+# Submit to EMR or any Spark cluster
+spark-submit \
+  --class com.capitalone.TransactionPipeline \
+  --master yarn \
+  --deploy-mode cluster \
+  --executor-memory 4G \
+  --num-executors 10 \
+  target/scala-2.12/capitalone-transaction-pipeline-1.0.0.jar \
+  s3://capitalone/raw/transactions/ \
+  s3://capitalone/processed/output/
+```
+
+The `--class` flag tells Spark which `object` with a `main` method to run. The last two arguments are `args(0)` and `args(1)` from inside your code.
+
+---
+
+## Testing with ScalaTest
+
+Production code needs tests. Here's how you test a Spark job:
+
+```scala
+package com.capitalone
+
+import com.capitalone.models.Transaction
+import com.capitalone.utils.RiskEngine
+import org.apache.spark.sql.SparkSession
+import org.scalatest.funsuite.AnyFunSuite
+import org.scalatest.BeforeAndAfterAll
+
+class TransactionPipelineTest extends AnyFunSuite with BeforeAndAfterAll {
+
+  // Create a local Spark session just for testing
+  val spark: SparkSession = SparkSession.builder()
+    .appName("TestSuite")
+    .master("local[*]")
+    .getOrCreate()
+
+  import spark.implicits._
+
+  test("RiskEngine classifies HIGH risk correctly") {
+    val t = Transaction("T001", "C001", 75000.00, "wire", "UK", "approved")
+    assert(RiskEngine.classifyTransaction(t) == "HIGH")
+  }
+
+  test("RiskEngine classifies gambling as MEDIUM risk") {
+    val t = Transaction("T002", "C002", 500.00, "gambling", "US", "approved")
+    assert(RiskEngine.classifyTransaction(t) == "MEDIUM")
+  }
+
+  test("Pipeline filters declined transactions") {
+    val transactions = Seq(
+      Transaction("T001", "C001", 5000.00, "retail", "US", "approved"),
+      Transaction("T002", "C002", 3000.00, "retail", "US", "declined"),
+      Transaction("T003", "C003", 1000.00, "retail", "US", "approved")
+    ).toDF()
+
+    val approved = transactions
+      .filter($"status" === "approved")
+
+    assert(approved.count() == 2)
+  }
+
+  override def afterAll(): Unit = {
+    spark.stop()
+  }
+}
+```
+
+Run with:
+```bash
+sbt test
+```
+
+---
+
+You've now covered the full Scala + Spark stack:
+
+- ✅ Scala fundamentals
+- ✅ Pattern matching and case classes
+- ✅ Option, Try, Either
+- ✅ Spark DataFrames and Datasets
+- ✅ UDFs
+- ✅ Joins
+- ✅ Complete pipeline structure
+- ✅ SBT project organization
+- ✅ Testing
+
+---
+
