--- a/DataMajor/First_Swipe/0002.Scala.Q.md
+++ b/DataMajor/First_Swipe/0002.Scala.Q.md
@@ -34,3 +34,49 @@
 ## Question 2 — Stepping Up
 
 **"What is the difference between a DataFrame and a Dataset in Spark, and when would you choose one over the other in a production pipeline?"**
+
+
+# Feedback
+
+---
+
+## What You Nailed ✅
+
+**Type safety distinction** — perfectly explained. Compile time vs runtime errors is exactly the right framing.
+
+**JVM objects** — correctly identified Dataset as strongly typed JVM objects. Shows deep understanding.
+
+**Serialization cost** — excellent that you mentioned the serialize/deserialize overhead. Most candidates miss this completely.
+
+**Language availability** — correctly identified DataFrame works across Python, R, Java, Scala while Dataset is Scala/Java only.
+
+**Decision framework** — you gave a clear when-to-use-which breakdown which is exactly what interviewers want.
+
+**Hybrid approach** — this is a senior-level insight. Mentioning that production pipelines often mix both shows real world thinking.
+
+---
+
+## What to Tighten Up 🔧
+
+**The serialization nuance** — you got the direction right but flip it slightly. DataFrames are actually faster because Spark uses its own internal **Tungsten binary format** and **Catalyst optimizer** to optimize execution. Datasets bypass some of those optimizations because they work with JVM objects directly. So the fuller explanation is:
+
+*"DataFrames leverage Spark's Catalyst optimizer and Tungsten execution engine for maximum performance. Datasets, because they work with typed JVM objects, introduce encoder/decoder overhead when converting between JVM objects and Spark's internal binary format."*
+
+**One missing point** — **Catalyst Optimizer**. Mentioning that DataFrames benefit from Spark's query optimizer while Datasets partially bypass it would elevate your answer significantly.
+
+---
+
+## Model Answer Addition
+
+*"One thing worth adding — under the hood a DataFrame is actually a Dataset[Row]. So they share the same execution engine. The difference is purely at the API level. In production at scale I'd typically read raw data as a DataFrame, validate and cast to a typed Dataset for business logic and transformations, then write back out as a DataFrame for performance. That hybrid pattern gives you type safety where it matters most without sacrificing performance on I/O heavy operations."*
+
+
+---
+
+## Question 3 — Getting Serious
+
+**"Walk me through how you would handle bad or malformed data in a production Scala Spark pipeline processing millions of Capital One transactions daily. What tools does Scala give you and how would you implement it?"**
+
+---
+---
+---
