--- a/DataMajor/First_Swipe/0002.Scala.Q.md
+++ b/DataMajor/First_Swipe/0002.Scala.Q.md
@@ -69,8 +69,8 @@
 ## Model Answer Addition
 
 *"One thing worth adding — under the hood a DataFrame is actually a Dataset[Row]. So they share the same execution engine. The difference is purely at the API level. In production at scale I'd typically read raw data as a DataFrame, validate and cast to a typed Dataset for business logic and transformations, then write back out as a DataFrame for performance. That hybrid pattern gives you type safety where it matters most without sacrificing performance on I/O heavy operations."*
-
-
+---
+---
 ---
 
 ## Question 3 — Getting Serious
@@ -78,5 +78,115 @@
 **"Walk me through how you would handle bad or malformed data in a production Scala Spark pipeline processing millions of Capital One transactions daily. What tools does Scala give you and how would you implement it?"**
 
 ---
+# Feedback
+
+---
+
+## What You Nailed ✅
+
+**Dead Letter Queue pattern** — excellent opening. Naming the architectural pattern first before diving into implementation shows senior-level thinking. Interviewers love when candidates lead with architecture.
+
+**READ modes** — correctly identified PERMISSIVE mode and `_corrupt_record`. Shows real Spark production knowledge.
+
+**Never use inferSchema = true** — this is a golden rule in production that junior engineers constantly violate. Saying this unprompted signals experience.
+
+**Amazon Deequ** — this is an advanced library that most candidates have never heard of. Mentioning it, especially in a Capital One context where it was actually built by Amazon for their own data quality needs, is a very strong signal.
+
+---
+
+## What to Tighten Up 🔧
+
+**You mentioned the three pieces but didn't connect them into a flow.** Interviewers want to see the pipeline end to end. How does PERMISSIVE mode feed into Deequ? Where does the dead letter queue live? What happens to bad records after they land there?
+
+**Missing the other READ modes** — you mentioned PERMISSIVE but didn't contrast it with DROPMALFORMED and FAILFAST. Knowing when to use each one is important:
+
+- `PERMISSIVE` — keep bad records, set nulls, store in `_corrupt_record` — use in production where data loss is unacceptable
+- `DROPMALFORMED` — silently drop bad rows — use when bad records are expected and unimportant
+- `FAILFAST` — throw exception immediately on bad data — use in testing or critical pipelines where any bad data is unacceptable
+
+**Option and Try not mentioned** — we covered these earlier. In a Scala-specific interview you should connect the language features to the pipeline design. Using `Try` to wrap risky parsing operations and `Either` to return meaningful error messages are Scala-specific tools that differentiate your answer from a PySpark answer.
+
+---
+
+## Model Answer — Full Connected Flow
+
+*"I'd implement a four-layer defense strategy.*
+
+*First, define an explicit schema — never inferSchema in production. This catches structural issues immediately at the schema level.*
+
+*Second, use PERMISSIVE read mode so malformed records don't kill the job. Spark stores those rows in the `_corrupt_record` column while nulling out bad fields, keeping the pipeline running.*
+
+```scala
+val schema = StructType(Seq(
+  StructField("id",       StringType,  nullable = false),
+  StructField("amount",   DoubleType,  nullable = false),
+  StructField("country",  StringType,  nullable = true),
+  StructField("status",   StringType,  nullable = true)
+))
+
+val df = spark.read
+  .schema(schema)
+  .option("mode", "PERMISSIVE")
+  .option("columnNameOfCorruptRecord", "_corrupt_record")
+  .csv("s3://capitalone/raw/transactions/")
+```
+
+*Third, split good records from bad immediately:*
+
+```scala
+val goodRecords = df.filter(col("_corrupt_record").isNull)
+val badRecords  = df.filter(col("_corrupt_record").isNotNull)
+
+// Route bad records to Dead Letter Queue
+badRecords.write
+  .mode("append")
+  .partitionBy("year", "month", "day")
+  .json("s3://capitalone/dead-letter-queue/")
+```
+
+*Fourth, run Amazon Deequ validation on good records for business rule violations — things the schema can't catch like negative amounts or invalid country codes:*
+
+```scala
+import com.amazon.deequ.VerificationSuite
+import com.amazon.deequ.checks.{Check, CheckLevel}
+
+val verificationResult = VerificationSuite()
+  .onData(goodRecords)
+  .addCheck(
+    Check(CheckLevel.Error, "Transaction Validation")
+      .isComplete("id")
+      .isComplete("amount")
+      .isNonNegative("amount")
+      .isContainedIn("status", Array("approved", "declined", "flagged"))
+      .isContainedIn("country", Array("US", "UK", "CA", "DE", "FR"))
+  )
+  .run()
+```
+
+*Finally use Try and Either at the record level for any custom parsing logic:*
+
+```scala
+def parseTransaction(raw: Row): Either[String, Transaction] = {
+  Try {
+    Transaction(
+      id       = raw.getAs[String]("id"),
+      amount   = raw.getAs[Double]("amount"),
+      country  = raw.getAs[String]("country"),
+      status   = raw.getAs[String]("status")
+    )
+  } match {
+    case Success(t)  => Right(t)
+    case Failure(ex) => Left(s"Parse failed for row $raw: ${ex.getMessage}")
+  }
+}
+```
+
+*This gives you four layers — schema validation, structural parsing, business rule validation, and record level error handling. Bad records never silently corrupt your output and are always traceable back to the source."*
+
 ---
 ---
+---
+
+## Question 4 — Lead Engineer Level
+
+**"You have a Scala Spark job running on EMR that processes 500 million Capital One transactions daily. It's been running fine for months but suddenly starts taking 3x longer to complete. How do you diagnose and fix it?"**
