--- a/DataMajor/First_Swipe/0002.Scala.Q.md
+++ b/DataMajor/First_Swipe/0002.Scala.Q.md
@@ -190,3 +190,105 @@ def parseTransaction(raw: Row): Either[String, Transaction] = {
 ## Question 4 — Lead Engineer Level
 
 **"You have a Scala Spark job running on EMR that processes 500 million Capital One transactions daily. It's been running fine for months but suddenly starts taking 3x longer to complete. How do you diagnose and fix it?"**
+
+---
+# Feedback
+
+---
+
+## What You Nailed ✅
+
+**Starting with "What Changed"** — this is exactly how a senior engineer thinks. Before diving into tools, you asked the right diagnostic question first. Interviewers love this instinct.
+
+**Data Skew** — max vs median task duration is the perfect way to describe it. That specific framing — "99% finishing in minutes, 1% taking hours" — is textbook data skew and shows you've seen it in production.
+
+**Memory spill to disk** — correctly identified and connected it to EBS volumes in EMR context. Very specific and accurate.
+
+**Small file problem** — excellent catch. Going from 1,000 large files to 1,000,000 small files is a classic EMR performance killer that junior engineers rarely think about.
+
+**S3 throttling** — very specific AWS knowledge. S3 has request rate limits per prefix and this absolutely causes slowdowns at Capital One scale. Strong point.
+
+**YARN Resource Manager** — checking for noisy neighbors competing for cluster resources is a real production concern. Good instinct.
+
+---
+
+## What to Tighten Up 🔧
+
+**Data Skew — missing the fix.** You diagnosed it perfectly but didn't say how to fix it. Interviewers always want diagnosis AND solution:
+
+```scala
+// Problem — one key has millions of records, others have thousands
+df.groupBy("country").agg(sum("amount"))  // "US" key causes skew
+
+// Fix 1 — Salting technique
+import org.apache.spark.sql.functions._
+
+val saltedDf = df.withColumn(
+  "salted_key",
+  concat(col("country"), lit("_"), (rand() * 10).cast("int"))
+)
+
+// Fix 2 — Broadcast join for skewed dimension tables
+import org.apache.spark.sql.functions.broadcast
+
+val result = largeDf.join(
+  broadcast(smallDf),  // forces small table to every executor
+  "country"
+)
+
+// Fix 3 — Increase spark.sql.shuffle.partitions
+spark.conf.set("spark.sql.shuffle.partitions", "400")
+// default is 200 — at 500M records you likely need more
+```
+
+**Missing — Shuffle and Partitioning analysis.** This is one of the most common causes of sudden slowdowns:
+
+```scala
+// Check current partitioning
+println(df.rdd.getNumPartitions)
+
+// Repartition if data has grown
+val repartitioned = df.repartition(400, col("country"))
+
+// Coalesce to reduce small partitions on write
+df.coalesce(100).write.parquet("s3://output/")
+```
+
+**Missing — GC pressure.** At 500M records, Java Garbage Collection pauses can suddenly spike if data volume grows. Worth mentioning:
+
+*"I'd check the Spark UI executor tab for GC time. If GC time exceeds 10% of task time that's a red flag. Fix is either increasing executor memory or switching to G1GC garbage collector on the JVM."*
+
+**Missing — Speculation.** Spark has a speculative execution feature that re-launches slow tasks on other nodes:
+
+```scala
+spark.conf.set("spark.speculation", "true")
+spark.conf.set("spark.speculation.multiplier", "1.5")
+```
+
+---
+
+## Model Answer — The Missing Piece: A Structured Framework
+
+The strongest answers to this question use a structured framework. Here's how to frame it:
+
+*"I approach performance degradation in three phases — Observe, Diagnose, Fix.*
+
+**Observe** — Spark UI first. I look at the timeline view for stage durations, the task metrics for max vs median, and the executor tab for GC time and spill metrics. Simultaneously I pull CloudWatch metrics for S3 request rates and EMR node health.
+
+**Diagnose** — I'm looking for one of five root causes: data skew, memory spill, shuffle bottleneck, small file explosion, or infrastructure change. Each has a distinct signature in the Spark UI.
+
+**Fix** — depends on diagnosis:
+- Skew → salting or broadcast joins
+- Spill → increase executor memory or optimize transformations
+- Shuffle → tune partition count, check shuffle read/write metrics
+- Small files → coalesce on ingest, use S3DistCp to compact
+- Infrastructure → check YARN capacity, spot interruptions, S3 throttling"*
+
+---
+---
+---
+
+## Question 5 — Final Boss 🏆
+
+**"Design a real-time fraud detection pipeline for Capital One that processes 10,000 transactions per second, flags suspicious activity within 5 seconds, and guarantees no transaction is ever lost. Walk me through your architecture, technology choices, and how Scala ties it all together."**
+---
